--- a/html-views/calendar2.html
+++ b/html-views/calendar2.html
@@ -14,7 +14,6 @@
     <!--external css-->
     <link href="../assets/font-awesome/css/font-awesome.css" rel="stylesheet"/>
     <link href="../assets/js/fullcalendar/bootstrap-fullcalendar.css" rel="stylesheet"/>
-
     <!-- Custom styles for this template -->
     <link href="../assets/css/style.css" rel="stylesheet">
     <link href="../assets/css/style-responsive.css" rel="stylesheet">
@@ -318,10 +317,12 @@
 </section>
 
 <!-- js placed at the end of the document so the pages load faster -->
-<script src="../assets/js/jquery.js"></script>
+<!--<script src="../assets/js/jquery.js"></script>-->
+<script src="../assets/js/jquery-1.8.3.min.js"></script>
 <script src="../assets/js/jquery-ui-1.9.2.custom.min.js"></script>
 <script src="../assets/js/fullcalendar/fullcalendar.min.js"></script>
 <script src="../assets/js/bootstrap.min.js"></script>
+
 <script class="include" type="text/javascript" src="../assets/js/jquery.dcjqaccordion.2.7.js"></script>
 <script src="../assets/js/jquery.scrollTo.min.js"></script>
 <script src="../assets/js/jquery.nicescroll.js" type="text/javascript"></script>
