--- a/html-views/general1.html
+++ b/html-views/general1.html
@@ -207,6 +207,22 @@
             </ul>
             <!--  notification end -->
         </div>
+        <div class="col-sm-5" style="text-align: center; padding-top: 10px;">
+            <form action="#"><!--这里是搜索的表单-->
+                <div class="input-group">
+                    <div class="input-icon-group">
+
+                        <input type="text" class="form-control fc-clear" onkeydown='if(event.keyCode==13){gosubmit();}'>
+                        <span id="scan" data-role="md" class="md md-center-focus-weak fa-lg input-icon input-icon-md" style="display: inline;"></span>
+                    </div>
+                    <span class="input-group-btn">
+                        <button class="btn btn-primary" type="submit">
+                            搜索
+                        </button>
+                    </span>
+                </div>
+            </form>
+        </div>
         <div class="top-menu">
             <ul class="nav pull-right top-menu">
                 <li><a class="logout" href="login.html">Logout</a></li>
@@ -251,11 +267,16 @@
     <section class="col-md-9" id="main-content" style="height: 70%;width: 80%;position: absolute;margin-top:5px ">
 
         <section class="createwrap">
-            <input type="button" class="btn btn-success  btn-s" value="修改" id="chang">
+            <div style="text-align: center">
+                <h1 >旭，这里是标题，需要添加</h1>
+                <input type="button" class="btn btn-success  btn-s" value="修改" id="chang">
+                <a href='javascript:void(0);' onclick="changlike()"> <i id="like" style="font-size: 25px" class='fa fa-heart-o'></i></a>
+            </div>
+
             <div>
-            <div id="summernote"><h1>Hello S</h1>
-            <p>ummern<span style="background-color: rgb(255, 0, 0);">ote13<font color="#ffd663">多福多寿<font
-            face="Arial Black">艾斯<b>德斯多</b></font></font></span></p></div>
+            <div id="summernote"><h4>272行：如果不是自己账户是修改不了的，如果是别人，272行应整个删除或者隐藏</h4>
+                <h4>290行：初始化评论在290行的div下搞（id为comment）搜索是用表单的</h4>
+                <h4>277行：文章直接把标签贴到277行的&lt;<span style="font-family: 宋体; font-size: 12pt; color: rgb(0, 0, 128); background-color: rgb(239, 239, 239); font-weight: bold;">div </span><span style="font-family: 宋体; font-size: 12pt; color: rgb(0, 0, 255); background-color: rgb(239, 239, 239); font-weight: bold;">id=</span><span style="font-family: 宋体; font-size: 12pt; color: rgb(0, 128, 0); background-color: rgb(239, 239, 239); font-weight: bold;">"summernote"&gt;</span>&nbsp; &nbsp; 里面。</h4>
             </div>
         </section>
         <! --/wrapper -->
@@ -263,6 +284,21 @@
                                                 value="提交" hidden="true" id="submit"></div>
 
 
+        <div id="commentarea">
+            <hr color="red" width="100%" size="100%">
+            <h3>评论区</h3>
+            <div class="container" id="comment">
+                <h4><strong>jarvis:</strong><div style="text-indent:2em;">123456</div></h4>
+            </div>
+            <a href='#collapseOne' data-toggle="collapse"> <i class='fa fa-comment' style="font-size: 25px"></i>
+            </a>
+            <div class="collapse" id="collapseOne">
+                <div class="input-sm col-sm-8">
+                    <input type="text" id="conmenttext" class="form-control">
+                </div>
+                <button type="submit" class="su btn btn-primary" >提交</button>
+            </div>
+        </div>
     </section><!-- /MAIN CONTENT -->
 
 </section>
@@ -283,6 +319,41 @@
 <script src="../assets/css/lang/summernote-zh-CN.js"></script>
 <script type="text/javascript" src="../assets/js/gritter-conf.js"></script>
 <script>
+    var like = false;
+    likefun()
+    function changlike() {
+        like = !like;
+        $.ajax({
+            type:"POST",
+            url: "127.0.0.1",
+            data :{like:like,textid:addressid},
+            xhrFields: {
+                withCredentials: true
+            },
+            crossDomain: true,
+            error:function(XMLHttpRequest, textStatus, errorThrown) {//请求错误
+                likefun();
+                alert(XMLHttpRequest.status+XMLHttpRequest.readyState+textStatus);
+            },
+            success:function(data){
+                $("#collapseOne").collapse('hide')
+                if(data.errCode==-1){
+                    alert(-1)
+                    //                          逻辑错误的操作
+                }else if(data.errCode == 0){
+                    //成功进行解析显示
+                    alert(1)
+                }
+            }
+        });
+    }
+    function likefun() {
+        if(like){
+            $("#like").attr("class","fa fa-heart");
+        }else{
+            $("#like").attr("class","fa fa-heart-o");
+        }
+    }
     var string1 = "poi1:1*poi2:2*kuma:#*kuma1:4*wo:#*!*!*poi3:3*!*";//"2:mt*3:#*5:mt*6:mt*!*4:mt";
     //文件目录树反序列
     function i(string) {
@@ -334,6 +405,8 @@
 $("#chang").click(function () {
     $("#chang").hide();
     $("#submit").show();
+    $("#commentarea").hide();
+    $("#like").hide();
     var height = $(window).height() * 0.7;
     $(document).ready(function () {
         $('#summernote').summernote({
@@ -358,15 +431,15 @@ $("#chang").click(function () {
 </script>
 <script>
     //上传文本操作
-    alert(location.href);
+    //alert(location.href);
     var ad = location.href;
     var t = ad.split("/");
-    var id = t[t.length - 1];
+    var addressid = t[t.length - 1];
     $('#submit').click(function () {
         $.ajax({
             type: "POST",
             url: address,
-            data: {text: $("#summernote").html(), id: id},
+            data: {text: $("#summernote").html(), id: addressid},
             xhrFields: {
                 withCredentials: true
             },
@@ -541,5 +614,49 @@ $("#chang").click(function () {
         },
     });
 </script>
+
+<script>
+    //评论
+    $('.su').click(function () {
+       // var id = $(this).attr("textid");
+//        alert($("#conmenttext-"+id).val());
+        var conment = $("#conmenttext").val();
+        $("#conmenttext").val("");
+        $.ajax({
+
+            type:"POST",
+            url: "127.0.0.1",
+            data :{commnet:conment,textid:addressid},
+            xhrFields: {
+                withCredentials: true
+            },
+            crossDomain: true,
+            error:function(XMLHttpRequest, textStatus, errorThrown) {//请求错误
+                //addcomment("456","jarvis");
+                $("#collapseOne").collapse('hide');
+
+                alert(XMLHttpRequest.status+XMLHttpRequest.readyState+textStatus);
+            },
+            success:function(data){
+                $("#collapseOne").collapse('hide')
+                if(data.errCode==-1){
+                    alert(-1)
+                    //                          逻辑错误的操作
+                }else if(data.errCode == 0){
+                    //成功进行解析显示
+//                $(".collapse").collapse(hide)
+                    alert(1)
+                }
+            }
+        });
+    })
+    function addcomment(co,user) {
+        var commentString ='<h4><strong>'+user+':</strong><div style="text-indent:2em;">'+co+'</div></h4>';
+        document.getElementById("comment").innerHTML += commentString;
+    }
+</script>
+
+
+
 </body>
 </html>
